dsp material edits / reorganization

--- a/common/dtft.tex
+++ b/common/dtft.tex
@@ -115,10 +115,12 @@ $\Dx(\omega)$ the \fncte{discrete-time Fourier transform} \xref{def:dtft} of $\s
     \begin{align*}
       \Dx(\omega)\Big|_{\omega=0}
         &= \left.\sum_{n\in\Z} x_n e^{-i\omega n} \right|_{\omega=0}
-        && \text{by definition of $\Dx(\omega)$ \xref{def:dtft}}
+        && \text{by definition of $\Dx(\omega)$}
+        && \text{\xref{def:dtft}}
       \\&= \left.\sum_{n\in\Z} x_n z^{-n} \right|_{z=1}
       \\&= \Zx(z)\Big|_{z=1}
-        && \text{by definition of $\Zx(z)$\ifsxref{dsp}{def:opZ}}
+        && \text{by definition of $\Zx(z)$}
+        && \text{\ifsxref{dsp}{def:opZ}}
       \\&= c
         && \text{by hypothesis (2)}
     \end{align*}
@@ -128,7 +130,8 @@ $\Dx(\omega)$ the \fncte{discrete-time Fourier transform} \xref{def:dtft} of $\s
       \sum_{n\in\Z} x_n
         &= \left.\sum_{n\in\Z} x_n e^{-i\omega n} \right|_{\omega=0}
       \\&= \Dx(\omega)
-        && \text{by definition of $\Dx(\omega)$ \xref{def:dtft}}
+        && \text{by definition of $\Dx(\omega)$}
+        && \text{\xref{def:dtft}}
       \\&= c
         && \text{by hypothesis (3)}
     \end{align*}
