--- a/common/pwspace.tex
+++ b/common/pwspace.tex
@@ -23,7 +23,7 @@ If the frame is \prope{orthonormal} (giving an \structe{orthonormal basis}), the
 \\\indentx$\ds\ff(x) = \sum_{n\in\Z} \inprod{\ff}{\vx_n}\vx_n$.\\
 In the case of the cardinal series, 
 the \fncte{Fourier coefficients}\ifsxref{frames}{def:fcoef} are particularly 
-simple---these coefficients are samples of $\ff$ taken at regular intervals \xrefP{thm:t_sampling}.
+simple---these coefficients are samples of $\ff$ taken at regular intervals \xrefP{thm:sampling}.
 In fact, one could represent the coefficients using inner product notation with the 
 \structe{Dirac delta distribution} $\delta$ \ifxref{relation}{def:dirac} as
 follows:
@@ -114,17 +114,16 @@ Let $\sigma\in\Rp$.
   \citerpg{marks1991}{1}{0387973915},
   \citer{nashed1991},
   \citerpg{higgins1996}{5}{0198596995},
-  \citerppgc{young2001}{90}{91}{0127729550}{\scshape The Paley-Wiener Space}
+  \citerppgc{young2001}{90}{91}{0127729550}{\scshape The Paley-Wiener Space}.
+  The {\em sampling theorem} was ``discovered" and published by multiple people: 
+  Nyquist in 1928 (DSP?), 
+  Whittaker in 1935 (interpolation theory),
+  and Shannon in 1949 (communication theory).
+  references: \citerp{mallat}{43},
+  \citerp{os}{143}.
   }
 \label{thm:t_sampling}
-%\footnotetext{
-%  The {\em sampling theorem} was ``discovered" and published by multiple people: 
-%  Nyquist in 1928 (DSP?), 
-%  Whittaker in 1935 (interpolation theory),
-%  and Shannon in 1949 (communication theory). \\
-%  references: \citerp{mallat}{43} \\
-%  \citerp{os}{143}.
-%  }
+\label{thm:sampling}
 %--------------------------------------
 %Let $\ff\in\spLLR$ and $\Ff(\omega)$ have bandwidth $W$ such that
 %$\Ff(\omega)=0$ for $\abs{\frac{\omega}{2\pi}}>W$. \\
@@ -383,9 +382,9 @@ In general all techniques lead only to an approximation of $\ff(x)$.
 However, if $\ff(x)$ is \prope{bandlimited} with bandwidth 
 $W\le\frac{1}{2T}$,
 then $\ff(x)$ is {\em perfectly reconstructed} (not just approximated)
-from the sampled values $\ff(n\tau)$ \xref{thm:t_sampling}.
+from the sampled values $\ff(n\tau)$ \xref{thm:sampling}.
  %using ``\hie{lowpass smoothing}" (the last technique in the list).
-%This perfect reconstruction is demonstrated in \prefp{thm:t_sampling}.
+%This perfect reconstruction is demonstrated in \prefp{thm:sampling}.
 
 
 
