--- a/common/sampling.tex
+++ b/common/sampling.tex
@@ -27,7 +27,7 @@
 %--------------------------------------
 
 %--------------------------------------
-\includegraphics{graphics/sin_pi_t.pdf}\\
+\includegraphics{graphics/sin_pi_t.pdf}
 \includegraphics{graphics/sin_pi_t_sampled.pdf}
 
 %--------------------------------------
@@ -39,16 +39,16 @@
     Sampling (analysis) & Approximation (synthesis)
     \\\hline\hline
     %$\spV_0$
-      \includegraphics[height=32mm]{graphics/haar0_sin_t.pdf}
-    & \includegraphics[height=32mm]{graphics/haar0_sin_a.pdf}
+      \includegraphics{graphics/haar0_sin_t.pdf}
+    & \includegraphics{graphics/haar0_sin_a.pdf}
     \\\hline
     %$\spV_1$
-      \includegraphics[height=32mm]{graphics/haar1_sin_t.pdf}
-    & \includegraphics[height=32mm]{graphics/haar1_sin_a.pdf}
+      \includegraphics{graphics/haar1_sin_t.pdf}
+    & \includegraphics{graphics/haar1_sin_a.pdf}
     \\\hline
     %$\spV_2$
-      \includegraphics[height=32mm]{graphics/haar2_sin_t.pdf}
-    & \includegraphics[height=32mm]{graphics/haar2_sin_a.pdf}
+      \includegraphics{graphics/haar2_sin_t.pdf}
+    & \includegraphics{graphics/haar2_sin_a.pdf}
     \\\hline
   \end{tabular}
 
@@ -59,44 +59,39 @@ If so, how fast do we need to sample?
 %--------------------------------------
 
 %--------------------------------------
-The \thmb{Sample Theorem} answers this question.
-\footnote{
-  \fncte{cardinal sequence}:
-  \citerpgc{higgins1996}{52}{0198596995}{Definition 6.15},
-  \citerc{hardy1941}{\prope{orthonormality}},
-  \citerpc{higgins1985}{56}{H1.; historical notes}.
-  \thme{sampling theorem}:
-  %\citerpc{higgins1985}{56}{H1.; historical notes}\\
-  %\citerp{higgins1985}{47}\\
-  \citor{etwhittaker1915},
-  \citor{kotelnikov1933e},
-  \citor{jmwhittaker1935},
-  \citePc{shannon1948}{Theorem 13},
-  \citePp{shannon1949}{11}
-  \citerpg{marks1991}{1}{0387973915},
-  \citer{nashed1991},
-  \citerpg{higgins1996}{5}{0198596995},
-  \citerppgc{young2001}{90}{91}{0127729550}{\scshape The Paley-Wiener Space}.
-  The {\em sampling theorem} was ``discovered" and published by multiple people: 
-  Nyquist in 1928 (DSP?), 
-  Whittaker in 1935 (interpolation theory),
-  and Shannon in 1949 (communication theory).
-  references: \citerp{mallat}{43} 
-  \citerp{os}{143}.
-  }
-\\
-\includegraphics[height=60mm]{graphics/sinclat.pdf}
-\\
-\emph{If} your signal is \propb{band-limited}, and
-\emph{if} you sample at a rate of \emph{at least} $2\times$ the highest frequency % (the \hie{Nyquist frequency}),\\
-%and filter with an \emph{ideal} low-pass filter,
-then you can get the original signal back (perfect synthesis!)
-But if you don't sample fast enough, you get \opb{aliasing}.
+\tbox{The \thmb{Sample Theorem} \xref{thm:sampling}\\answers this question:}
+\quad
+\tbox{\includegraphics{graphics/sinclat.pdf}}
+\\\indentx\begin{tabular}{cl}
+  \imark & \emph{If} your signal is \propb{band-limited}, and
+       \\& \emph{if} you sample at a rate of \emph{at least} $2\times$ the highest frequency (the \hie{Nyquist frequency}), and 
+       \\& \emph{if} you happen to have an \emph{ideal} low-pass filter,
+       \\& \emph{then} you can get the original signal back (perfect synthesis!).
+  \\\imark & \emph{But} if you don't sample fast enough, you get \opb{aliasing}.
+\end{tabular}
+
+When aliasing occurs, a high frequency component can ``masquerade" as (``pretend" to be, 
+``impersonate", ``assume the identity" of, or ``take on the alias" of) 
+an entirely different low frequency component.
+That is, is forces a high frequency component to take up residence as an 
+\hie{alien} (\hie{alias} and \hie{alien} have the same Latin root \hie{al} meaning 
+``beyond"\footnote{%
+  \url{https://www.etymonline.com/word/alias}, 
+  \url{https://www.etymonline.com/word/alien}
+  }) 
+in a low frequency location.
 
 %--------------------------------------
 \begin{example}[\exmd{Aliasing using \emph{Audacity}}]
 %--------------------------------------
-Here is an experiment with aliasing you can try using the free program \emph{Audacity}.
+Here is an experiment with aliasing you can try using the free program 
+\hie{Audacity} and the \hie{Nyquist programming language plugin}.\footnote{%
+  \hie{Audacity}\rtrademark: 
+  ``Free, open source, cross-platform audio software".
+  \url{https://www.audacityteam.org/};
+  \hie{Nyquist plugin}:
+  \url{https://www.audacityteam.org/about/nyquist/}
+  }
 \\\exboxt{
   \tbox{\includegraphics[height=60mm]{../common/math/graphics/audacity_hzosc.jpg}}\qquad
   \begin{tabular}{rl}
@@ -105,7 +100,9 @@ Here is an experiment with aliasing you can try using the free program \emph{Aud
     3. & Select 1 second to 11 seconds\\
     4. & Effect $\rightarrow$ Nyquist prompt $\rightarrow$ (hzosc 9900) 
   \end{tabular}
-  }
+  }\\
+In this case, the 9900 Hz sinusoid will be aliased to show up as a 100 Hz sinusoid
+(more impressive if you happen to have a good subwoofer handy).
 \end{example}
 
 \input{../common/pwspace.tex}
